codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_with_inline_unified_exec_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1154
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt) · 1 backgroun…
                                                
                                                
› Ask Codex to do anything                      
                                                
  loading · 100% left
