codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__unified_exec_footer_without_status_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1180
expression: "render_snapshot(&pane, area)"
---
  1 background terminal running · /ps to view · 
                                                
                                                
› Ask Codex to do anything                      
                                                
  loading · 100% left
